# nukeserversocket

./: .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  CHANGELOG.md  LICENSE  Pipfile  README.html  README.md  README_nukepedia.html  __init__.py  build.py  houdini_package.json  pyproject.toml  pytest.ini  release_manager.py  requirements.txt  requirements2.txt  requirements3.txt  setup.py  tox.ini
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: tests.yaml
.github/workflows/: github_tests_actions.yml  nss_github_tests.yml  tests.yaml  tests.yml
nukeserversocket/: __init__.py  about.py  console.py  editor_controller.py  logger.py  main.py  received_data.py  server.py  settings.py  settings_ui.py  toolbar.py  util.py  version.py
nukeserversocket/controllers/: __init__.py  base.py  local.py  local_app.py  nuke.py  nuke_controllers.py  nuke_script_editor.py
nukeserversocket/local/: fake_script_editor.py  run_local.py
nukeserversocket/network/: data_to_code.py  nss_client.py  nss_server.py  nss_socket.py
nukeserversocket/plugins/: local_app.py  nuke.py
nukeserversocket/refactor/: controller.py  install_nuke.py  main.py  received_data.py  server.py  settings.py  settings_ui.py  toolbar.py
nukeserversocket/utils/: __init__.py  cache.py  exec_code.py  get_root.py  stdout.py
nukeserversocket/widgets/: __init__.py  about_widget.py  connections_widget.py  error_dialog.py  log_widgets.py  settings_widget.py  timer.py  toolbar.py
project/: __init__.py  about.py  env.py
scripts/: create_zip_project.sh  release_manager.py  tests.sh
src/: __init__.py  _nuke.py  about.py  logger.py  main.py  run_local.py  util.py
src/connection/: __init__.py  client.py  data_to_code.py  nss_client.py  nss_server.py  nss_socket.py  server.py  socket.py  test_client.py
src/controllers/: nuke_controllers.py  nuke_script_editor.py
src/local/: fake_script_editor.py  run_local.py
src/network/: __init__.py  data_to_code.py  nss_client.py  nss_server.py  nss_socket.py
src/script_editor/: __init__.py  nuke_controllers.py  nuke_script_editor.py  nuke_se.py  nuke_se_controllers.py
src/utils/: __init__.py  env.py  get_script_editor.py  nuke_exec.py  paths.py  settings.py  util.py
src/widgets/: __init__.py  about_widget.py  connections_widget.py  error_dialog.py  fake_script_editor.py  log_widgets.py  options.py  options_dialog.py  script_editor.py  server_status.py  settings_widget.py  text_widgets.py  timer.py  toolbar.py
tasks/: build.sh
test/: ScriptEditor.py  __init__.py  send_sample.py  test_main.py  vscode_test.py
tests/: __init__.py  conftest.py  pytest.ini  run_app.py  run_local.py  test_about_widget.py  test_app.py  test_connection_gui.py  test_data_code.py  test_editor_controller.py  test_error_dialog.py  test_exec_code.py  test_is_connected.py  test_local_ip.py  test_log_widgets.py  test_main.py  test_nuke.py  test_options_names.py  test_port_widget.py  test_py_controller.py  test_received_data.py  test_se_controllers.py  test_send_nodes.py  test_server.py  test_settings.py  test_settings_ui.py  test_settings_widget.py  test_toolbar.py  test_utils.py  test_version.py
tests/connections/: conftest.py  test_connection_classes.py  test_connection_gui.py  test_is_connected.py  test_is_websocket.py  test_send_nodes.py
tests/controllers/: conftest.py  test_blink_controller.py  test_code_editor.py  test_copy_nodes_controller.py  test_py_controller.py  test_se_controller.py
tests/gui/: test_is_connected.py  test_is_idle.py  test_is_sender.py
tests/network/: conftest.py  test_connection_classes.py  test_connection_gui.py  test_send_nodes.py  (+2 more)
(+19 files in other folders)
