[tool.poetry]
name = "nukeserversocket"
version = "0.6.2"
description = "A Nuke plugin that will allow code execution from the local network via TCP/WebSocket connections and more."
authors = ["virgilsisoe <virgilsisoe@gmail.com>"]

[tool.isort]
skip = ["__init__.py"]
length_sort = true
add_imports = "from __future__ import annotations"


[tool.autopep8]
max_line_length = 100

[tool.coverage.paths]
source = ["nukeserversocket/refactor"]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.run]
omit = ["nukeserversocket/refactor/tests/*", "nukeserversocket/refactor/__init__.py"]

[tool.pytest.ini_options]
testpaths = "tests/refactor"
qt_api = "pyside2"
markers = ["quick: mark test"]
addopts = [
    "--cov=nukeserversocket/refactor",
    "--cov-report=html",
    "-W ignore::DeprecationWarning",
]

[tool.poetry.dependencies]
python = "~3.7"
PySide2 = "<=5.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "~6.2.5"
pytest-qt = "~4.0.2"
requests = "~2.26.0"
pytest-cov = "~3.0.0"
pytest-randomly = "^3.10.1"
pytest-repeat = "^0.9.1"
tox = "^4.1.3"
pdoc = "^12.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
