[tool.poetry]
name = "nukeserversocket"
version = "1.0.0"
description = "A Nuke plugin that will allow code execution from the local network via TCP/WebSocket connections and more."
authors = ["virgilsisoe <virgilsisoe@gmail.com>"]

[tool.poetry.scripts]
nukeserversocket = "nukeserversocket.controllers.local_app:main"
build = "release_manager:build"

[tool.isort]
skip = ["__init__.py"]
length_sort = true
add_imports = "from __future__ import annotations"

[tool.autopep8]
max_line_length = 100

[tool.coverage.paths]
source = ["nukeserversocket"]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.run]
omit = ["nukeserversocket/tests/*", "nukeserversocket/__init__.py"]

[tool.pytest.ini_options]
testpaths = "tests"
qt_api = "pyside2"
markers = ["quick: mark test"]
addopts = [
    "--cov=nukeserversocket",
    "--cov-report=html",
    "--cov-report=xml",
    "-W ignore::DeprecationWarning",
]

[tool.poetry.dependencies]
python = ">=3.7.7,<3.11"

[tool.poetry.group.dev.dependencies]
pyside2 = "5.15.2.1"
pytest = "^7.4.3"
tox = "4.8.0"
pytest-qt = "^4.2.0"
pytest-cov = "^4.1.0"
pytest-repeat = "^0.9.3"
pytest-randomly = "3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
